@@ -313,7 +313,7 @@ To compile \ejabberd{} execute the commands:
 make
 \end{verbatim}
 
-The build configuration script provides several parameters.
+The build configuration script allows several options.
 To get the full list run the command:
 \begin{verbatim}
 ./configure --help
@@ -325,7 +325,7 @@ Some options that you may be interested in modifying:
 	Specify the path prefix where the files will be copied when running the make install command.
 
 	\titem{--enable-pam} 
-	Enable the PAM authentication method.
+	Enable the PAM authentication method (see section \ref{pam}).
 
 	\titem{--enable-odbc or --enable-mssql}
 	Required if you want to use an external database.
@@ -348,7 +348,8 @@ To install \ejabberd{} in the destination directories, run the command:
 \begin{verbatim}
 make install
 \end{verbatim}
-Note that you may need to have administrative privileges in the system.
+Note that you probably need administrative privileges in the system
+to install \term{ejabberd}.
 
 The files and directories created are, by default:
 \begin{description}
@@ -358,7 +359,7 @@ The files and directories created are, by default:
 			\titem{ejabberdctl.cfg} Configuration file of the administration script
 			\titem{inetrc} Network DNS configuration
 		\end{description}
-	\titem{/sbin/ejabberdctl} Administration script
+	\titem{/sbin/ejabberdctl} Administration script (see section~\ref{ejabberdctl})
 	\titem{/var/lib/ejabberd/}
 		\begin{description}
 			\titem{.erlang.cookie} Erlang cookie file (see section \ref{cookie})
@@ -366,6 +367,7 @@ The files and directories created are, by default:
 			\titem{ebin} Binary Erlang files (*.beam)
 			\titem{priv}
 				\begin{description}
+					\titem{bin} Binary C programs
 					\titem{lib} Binary system libraries (*.so)
 					\titem{msgs} Translated strings (*.msgs)
 				\end{description}
@@ -393,6 +395,7 @@ ejabberd is running
 
 ejabberdctl stop
 \end{verbatim}
+
 Please refer to the section~\ref{ejabberdctl} for details about \term{ejabberdctl},
 and configurable options to fine tune the Erlang runtime system.
 
@@ -1117,7 +1120,7 @@ security issues:
 
 \begin{itemize}
 \item To perform PAM authentication \ejabberd{} uses external C-program called
-\term{epam}. By default, it is located in \verb|/var/lib/ejabberd/priv/lib/|
+\term{epam}. By default, it is located in \verb|/var/lib/ejabberd/priv/bin/|
 directory. You have to set it root on execution in the case when your PAM module
 requires root privileges (\term{pam\_unix.so} for example). Also you have to grant access
 for \ejabberd{} to this file and remove all other permissions from it.
